commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.1047825,
-  "buy": 19.355,
-  "date": "2022-12-09 09:40:10",
-  "prev_buy": 20.01626,
-  "prev_sell": 19.2717
+  "sell": 20.14965425,
+  "buy": 19.396356,
+  "date": "2022-12-09 09:50:10",
+  "prev_buy": 20.02226325,
+  "prev_sell": 19.280422
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 20.0059875,
-  "buy": 19.45375,
-  "date": "2022-12-09 09:40:12",
-  "prev_buy": 19.9179,
-  "prev_sell": 19.370025
+  "sell": 20.05063875,
+  "buy": 19.495317,
+  "date": "2022-12-09 09:50:12",
+  "prev_buy": 19.92387375,
+  "prev_sell": 19.3787915
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.15418,
-  "buy": 19.355,
-  "date": "2022-12-09 09:40:14",
-  "prev_buy": 20.06544,
-  "prev_sell": 19.2717
+  "sell": 20.199162,
+  "buy": 19.396356,
+  "date": "2022-12-09 09:50:14",
+  "prev_buy": 20.071458,
+  "prev_sell": 19.280422
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.2656,
-  "buy": 19.2551,
-  "date": "2022-12-09 09:40:16",
-  "prev_buy": 20.182,
-  "prev_sell": 19.163
+  "sell": 20.2679,
+  "buy": 19.2574,
+  "date": "2022-12-09 09:50:16",
+  "prev_buy": 20.1709,
+  "prev_sell": 19.1604
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 20.075144,
-  "buy": 19.246375,
-  "date": "2022-12-09 09:40:20",
-  "prev_buy": 19.986752,
-  "prev_sell": 19.1635425
+  "sell": 20.1199496,
+  "buy": 19.2874989,
+  "date": "2022-12-09 09:50:20",
+  "prev_buy": 19.9927464,
+  "prev_sell": 19.17221555
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 20.114662,
-  "buy": 19.285875,
-  "date": "2022-12-09 09:40:21",
-  "prev_buy": 20.026096,
-  "prev_sell": 19.2028725
+  "sell": 20.1595558,
+  "buy": 19.3270833,
+  "date": "2022-12-09 09:50:21",
+  "prev_buy": 20.0321022,
+  "prev_sell": 19.21156335
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 20.1245415,
-  "buy": 19.108125,
-  "date": "2022-12-09 09:40:21",
-  "prev_buy": 20.035932,
-  "prev_sell": 19.0258875
+  "sell": 20.16945735,
+  "buy": 19.1489535,
+  "date": "2022-12-09 09:50:21",
+  "prev_buy": 20.04194115,
+  "prev_sell": 19.03449825
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 20.0830476,
-  "buy": 19.3076,
-  "date": "2022-12-09 09:40:22",
-  "prev_buy": 19.9946208,
-  "prev_sell": 19.224504
+  "sell": 20.12787084,
+  "buy": 19.34885472,
+  "date": "2022-12-09 09:50:21",
+  "prev_buy": 20.00061756,
+  "prev_sell": 19.23320464
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.996108,
-  "buy": 19.118,
-  "date": "2022-12-09 09:40:22",
+  "sell": 20.0407372,
+  "buy": 19.1588496,
+  "date": "2022-12-09 09:50:22",
   "prev_buy": 19.908064,
   "prev_sell": 19.03572
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.173939,
-  "buy": 18.90075,
-  "date": "2022-12-09 09:40:23",
+  "sell": 20.2189651,
+  "buy": 18.9411354,
+  "date": "2022-12-09 09:50:22",
   "prev_buy": 20.085112,
   "prev_sell": 18.819405
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 20.134421,
-  "buy": 19.33525,
-  "date": "2022-12-09 09:40:23",
+  "sell": 20.1793589,
+  "buy": 19.3765638,
+  "date": "2022-12-09 09:50:23",
   "prev_buy": 20.045768,
   "prev_sell": 19.252035
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.252975,
-  "buy": 18.96,
-  "date": "2022-12-09 09:40:24",
+  "sell": 20.2981775,
+  "buy": 19.000512,
+  "date": "2022-12-09 09:50:23",
   "prev_buy": 20.1638,
   "prev_sell": 18.8784
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.22234855,
-  "buy": 19.285875,
-  "date": "2022-12-09 09:40:24",
+  "sell": 20.2674827,
+  "buy": 19.3270833,
+  "date": "2022-12-09 09:50:24",
   "prev_buy": 20.1333084,
   "prev_sell": 19.2028725
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.2035775,
-  "buy": 19.305625,
-  "date": "2022-12-09 09:40:25",
+  "sell": 20.24866975,
+  "buy": 19.3468755,
+  "date": "2022-12-09 09:50:24",
   "prev_buy": 20.11462,
   "prev_sell": 19.2225375
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.2035775,
-  "buy": 19.29575,
-  "date": "2022-12-09 09:40:25",
+  "sell": 20.24866975,
+  "buy": 19.3369794,
+  "date": "2022-12-09 09:50:25",
   "prev_buy": 20.11462,
   "prev_sell": 19.212705
 },{
