--- a/indexRt.html
+++ b/indexRt.html
@@ -46567,6 +46567,10 @@
     {
       "Date": "2022-12-09 05:00",
       "Rate": "19.7704"
+    },
+    {
+      "Date": "2022-12-09 06:00",
+      "Rate": "19.7694"
     }
   ]
 }
