commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46571,6 +46571,10 @@
     {
       "Date": "2022-12-09 06:00",
       "Rate": "19.7694"
+    },
+    {
+      "Date": "2022-12-09 07:00",
+      "Rate": "19.8065"
     }
   ]
 }
