--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -12,7 +12,7 @@
   "sell": 20.27,
   "buy": 19.2,
   "date": "2022-12-09 11:00:09",
-  "prev_buy": 20.21,
+  "prev_buy": 20.15,
   "prev_sell": 19.08
 },{
   "bank_id": 3,
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.15464,
-  "buy": 19.3942,
-  "date": "2022-12-09 11:20:10",
-  "prev_buy": 20.0579775,
-  "prev_sell": 19.316584
+  "sell": 20.17407425,
+  "buy": 19.426638,
+  "date": "2022-12-09 11:40:10",
+  "prev_buy": 20.0286735,
+  "prev_sell": 19.288164
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 20.0556,
-  "buy": 19.49315,
-  "date": "2022-12-09 11:20:13",
-  "prev_buy": 19.9594125,
-  "prev_sell": 19.415138
+  "sell": 20.07493875,
+  "buy": 19.5257535,
+  "date": "2022-12-09 11:40:13",
+  "prev_buy": 19.9302525,
+  "prev_sell": 19.386573
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.20416,
-  "buy": 19.3942,
-  "date": "2022-12-09 11:20:15",
-  "prev_buy": 20.10726,
-  "prev_sell": 19.316584
+  "sell": 20.223642,
+  "buy": 19.426638,
+  "date": "2022-12-09 11:40:15",
+  "prev_buy": 20.077884,
+  "prev_sell": 19.288164
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.04,
-  "buy": 19.53,
-  "date": "2022-12-09 10:40:15",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-12-09 11:30:15",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.3357,
-  "buy": 19.3252,
-  "date": "2022-12-09 11:20:16",
-  "prev_buy": 20.1919,
-  "prev_sell": 19.1814
+  "sell": 20.3271,
+  "buy": 19.3166,
+  "date": "2022-12-09 11:40:16",
+  "prev_buy": 20.1784,
+  "prev_sell": 19.1679
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 20.124928,
-  "buy": 19.285355,
-  "date": "2022-12-09 11:20:21",
-  "prev_buy": 20.028408,
-  "prev_sell": 19.2081746
+  "sell": 20.1443336,
+  "buy": 19.31761095,
+  "date": "2022-12-09 11:40:21",
+  "prev_buy": 19.9991472,
+  "prev_sell": 19.1799141
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 20.164544,
-  "buy": 19.324935,
-  "date": "2022-12-09 11:20:21",
-  "prev_buy": 20.067834,
-  "prev_sell": 19.2475962
+  "sell": 20.1839878,
+  "buy": 19.35725715,
+  "date": "2022-12-09 11:40:21",
+  "prev_buy": 20.0385156,
+  "prev_sell": 19.2192777
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 20.174448,
-  "buy": 19.146825,
-  "date": "2022-12-09 11:20:22",
-  "prev_buy": 20.0776905,
-  "prev_sell": 19.070199
+  "sell": 20.19390135,
+  "buy": 19.17884925,
+  "date": "2022-12-09 11:40:21",
+  "prev_buy": 20.0483577,
+  "prev_sell": 19.0421415
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 20.1328512,
-  "buy": 19.346704,
-  "date": "2022-12-09 11:20:23",
-  "prev_buy": 20.0362932,
-  "prev_sell": 19.26927808
+  "sell": 20.15226444,
+  "buy": 19.37906256,
+  "date": "2022-12-09 11:40:22",
+  "prev_buy": 20.00702088,
+  "prev_sell": 19.24092768
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 20.045696,
-  "buy": 19.15672,
-  "date": "2022-12-09 11:20:23",
-  "prev_buy": 19.949556,
-  "prev_sell": 19.0800544
+  "sell": 20.0650252,
+  "buy": 19.1887608,
+  "date": "2022-12-09 11:40:22",
+  "prev_buy": 19.9204104,
+  "prev_sell": 19.0519824
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.223968,
-  "buy": 18.93903,
-  "date": "2022-12-09 11:20:23",
-  "prev_buy": 20.126973,
-  "prev_sell": 18.8632356
+  "sell": 20.2434691,
+  "buy": 18.9707067,
+  "date": "2022-12-09 11:40:23",
+  "prev_buy": 20.0975682,
+  "prev_sell": 18.8354826
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 20.184352,
-  "buy": 19.37441,
-  "date": "2022-12-09 11:20:24",
-  "prev_buy": 20.087547,
-  "prev_sell": 19.2968732
+  "sell": 20.2038149,
+  "buy": 19.4068149,
+  "date": "2022-12-09 11:40:23",
+  "prev_buy": 20.0581998,
+  "prev_sell": 19.2684822
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.3032,
-  "buy": 18.9984,
-  "date": "2022-12-09 11:20:24",
-  "prev_buy": 20.205825,
-  "prev_sell": 18.922368
+  "sell": 20.3227775,
+  "buy": 19.030176,
+  "date": "2022-12-09 11:40:24",
+  "prev_buy": 20.176305,
+  "prev_sell": 18.894528
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.2724976,
-  "buy": 19.324935,
-  "date": "2022-12-09 11:20:25",
-  "prev_buy": 20.17526985,
-  "prev_sell": 19.2475962
+  "sell": 20.2920455,
+  "buy": 19.35725715,
+  "date": "2022-12-09 11:40:24",
+  "prev_buy": 20.14579449,
+  "prev_sell": 19.2192777
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.25368,
-  "buy": 19.344725,
-  "date": "2022-12-09 11:20:25",
-  "prev_buy": 20.1565425,
-  "prev_sell": 19.267307
+  "sell": 20.27320975,
+  "buy": 19.37708025,
+  "date": "2022-12-09 11:40:25",
+  "prev_buy": 20.1270945,
+  "prev_sell": 19.2389595
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.25368,
-  "buy": 19.33483,
-  "date": "2022-12-09 11:20:26",
-  "prev_buy": 20.1565425,
-  "prev_sell": 19.2574516
+  "sell": 20.27320975,
+  "buy": 19.3671687,
+  "date": "2022-12-09 11:40:25",
+  "prev_buy": 20.1270945,
+  "prev_sell": 19.2291186
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
