commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46575,6 +46575,10 @@
     {
       "Date": "2022-12-09 07:00",
       "Rate": "19.8065"
+    },
+    {
+      "Date": "2022-12-09 08:00",
+      "Rate": "19.8250"
     }
   ]
 }
