commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46579,6 +46579,10 @@
     {
       "Date": "2022-12-09 08:00",
       "Rate": "19.8250"
+    },
+    {
+      "Date": "2022-12-09 09:00",
+      "Rate": "19.7997"
     }
   ]
 }
