commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46583,6 +46583,10 @@
     {
       "Date": "2022-12-09 09:00",
       "Rate": "19.7997"
+    },
+    {
+      "Date": "2022-12-09 10:00",
+      "Rate": "19.7777"
     }
   ]
 }
