commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46587,6 +46587,10 @@
     {
       "Date": "2022-12-09 10:00",
       "Rate": "19.7777"
+    },
+    {
+      "Date": "2022-12-09 11:00",
+      "Rate": "19.7799"
     }
   ]
 }
