commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46591,6 +46591,10 @@
     {
       "Date": "2022-12-09 11:00",
       "Rate": "19.7799"
+    },
+    {
+      "Date": "2022-12-09 12:00",
+      "Rate": "19.7749"
     }
   ]
 }
