--- a/indexRt.html
+++ b/indexRt.html
@@ -46595,6 +46595,10 @@
     {
       "Date": "2022-12-09 12:00",
       "Rate": "19.7749"
+    },
+    {
+      "Date": "2022-12-09 13:00",
+      "Rate": "19.7657"
     }
   ]
 }
