--- a/indexRt.html
+++ b/indexRt.html
@@ -46599,6 +46599,10 @@
     {
       "Date": "2022-12-09 13:00",
       "Rate": "19.7657"
+    },
+    {
+      "Date": "2022-12-09 14:00",
+      "Rate": "19.7739"
     }
   ]
 }
