commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46603,6 +46603,10 @@
     {
       "Date": "2022-12-09 14:00",
       "Rate": "19.7739"
+    },
+    {
+      "Date": "2022-12-09 15:00",
+      "Rate": "19.7769"
     }
   ]
 }
