commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46607,6 +46607,10 @@
     {
       "Date": "2022-12-09 15:00",
       "Rate": "19.7769"
+    },
+    {
+      "Date": "2022-12-09 16:00",
+      "Rate": "19.7769"
     }
   ]
 }
