commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -4,16 +4,16 @@
   "sell": 20.3,
   "buy": 18.8,
   "date": "2022-12-09 10:30:08",
-  "prev_buy": 20.2,
-  "prev_sell": 18.7
+  "prev_buy": 20.3,
+  "prev_sell": 18.8
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 20.27,
-  "buy": 19.14,
-  "date": "2022-12-09 16:50:09",
-  "prev_buy": 20.09,
-  "prev_sell": 19.02
+  "sell": 20.06,
+  "buy": 18.91,
+  "date": "2022-12-12 10:10:09",
+  "prev_buy": 20.27,
+  "prev_sell": 19.14
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.1271675,
-  "buy": 19.35696,
-  "date": "2022-12-09 17:50:10",
-  "prev_buy": 19.96335,
-  "prev_sell": 19.2129
+  "sell": 20.142023,
+  "buy": 19.397532,
+  "date": "2022-12-12 10:20:11",
+  "prev_buy": 20.1271675,
+  "prev_sell": 19.35696
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -52,16 +52,16 @@
   "sell": 20.05,
   "buy": 18.65,
   "date": "2022-12-09 12:40:13",
-  "prev_buy": 19.95,
-  "prev_sell": 18.55
+  "prev_buy": 20.05,
+  "prev_sell": 18.65
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 20.0282625,
-  "buy": 19.45572,
-  "date": "2022-12-09 17:50:13",
-  "prev_buy": 19.86525,
-  "prev_sell": 19.310925
+  "sell": 20.043045,
+  "buy": 19.496499,
+  "date": "2022-12-12 10:20:13",
+  "prev_buy": 20.0282625,
+  "prev_sell": 19.45572
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.17662,
-  "buy": 19.35696,
-  "date": "2022-12-09 17:50:15",
-  "prev_buy": 20.0124,
-  "prev_sell": 19.2129
+  "sell": 20.191512,
+  "buy": 19.397532,
+  "date": "2022-12-12 10:20:16",
+  "prev_buy": 20.17662,
+  "prev_sell": 19.35696
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -107,17 +107,17 @@
   "bank_name": "MONEX",
   "sell": 20.04,
   "buy": 19.53,
-  "date": "2022-12-09 20:40:17",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "date": "2022-12-12 11:00:16",
+  "prev_buy": 20.04,
+  "prev_sell": 19.53
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.291,
-  "buy": 19.263,
-  "date": "2022-12-09 18:10:17",
-  "prev_buy": 20.148,
-  "prev_sell": 19.134
+  "sell": 20.2943,
+  "buy": 19.2838,
+  "date": "2022-12-12 11:00:16",
+  "prev_buy": 20.291,
+  "prev_sell": 19.263
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": " 19.6732",
-  "buy": " 19.6732",
+  "sell": 19.5585,
+  "buy": 19.5585,
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -140,8 +140,8 @@
   "sell": 20.3,
   "buy": 19.3,
   "date": "2022-12-09 10:50:19",
-  "prev_buy": 20.2,
-  "prev_sell": 19.2
+  "prev_buy": 20.3,
+  "prev_sell": 19.3
 },{
   "bank_id": 19,
   "bank_name": "BANCOBASE",
@@ -153,107 +153,107 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": " 19.6732",
-  "buy": " 19.6732",
+  "sell": 19.6732,
+  "buy": 19.6732,
   "date": "2022-12-09 02:10:22",
-  "prev_buy": 19.6977,
-  "prev_sell": 19.6977
+  "prev_buy": 19.6732,
+  "prev_sell": 19.6732
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 20.097496,
-  "buy": 19.248324,
-  "date": "2022-12-09 17:50:22",
-  "prev_buy": 19.93392,
-  "prev_sell": 19.1050725
+  "sell": 20.1123296,
+  "buy": 19.2886683,
+  "date": "2022-12-12 10:20:23",
+  "prev_buy": 20.097496,
+  "prev_sell": 19.248324
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 20.137058,
-  "buy": 19.287828,
-  "date": "2022-12-09 17:50:23",
-  "prev_buy": 19.97316,
-  "prev_sell": 19.1442825
+  "sell": 20.1519208,
+  "buy": 19.3282551,
+  "date": "2022-12-12 10:20:24",
+  "prev_buy": 20.137058,
+  "prev_sell": 19.287828
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 20.1469485,
-  "buy": 19.11006,
-  "date": "2022-12-09 17:50:23",
-  "prev_buy": 19.98297,
-  "prev_sell": 18.9678375
+  "sell": 20.1618186,
+  "buy": 19.1501145,
+  "date": "2022-12-12 10:20:24",
+  "prev_buy": 20.1469485,
+  "prev_sell": 19.11006
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 20.1054084,
-  "buy": 19.3095552,
-  "date": "2022-12-09 17:50:24",
-  "prev_buy": 19.941768,
-  "prev_sell": 19.165848
+  "sell": 20.12024784,
+  "buy": 19.35002784,
+  "date": "2022-12-12 10:20:25",
+  "prev_buy": 20.1054084,
+  "prev_sell": 19.3095552
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 20.018372,
-  "buy": 19.119936,
-  "date": "2022-12-09 17:50:24",
-  "prev_buy": 19.85544,
-  "prev_sell": 18.97764
+  "sell": 20.0331472,
+  "buy": 19.1600112,
+  "date": "2022-12-12 10:20:25",
+  "prev_buy": 20.018372,
+  "prev_sell": 19.119936
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.196401,
-  "buy": 18.902664,
-  "date": "2022-12-09 17:50:25",
-  "prev_buy": 20.03202,
-  "prev_sell": 18.761985
+  "sell": 20.2113076,
+  "buy": 18.9422838,
+  "date": "2022-12-12 10:20:26",
+  "prev_buy": 20.196401,
+  "prev_sell": 18.902664
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 20.156839,
-  "buy": 19.337208,
-  "date": "2022-12-09 17:50:25",
-  "prev_buy": 19.99278,
-  "prev_sell": 19.193295
+  "sell": 20.1717164,
+  "buy": 19.3777386,
+  "date": "2022-12-12 10:20:26",
+  "prev_buy": 20.156839,
+  "prev_sell": 19.337208
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.275525,
-  "buy": 18.96192,
-  "date": "2022-12-09 17:50:26",
-  "prev_buy": 20.1105,
-  "prev_sell": 18.8208
+  "sell": 20.29049,
+  "buy": 19.001664,
+  "date": "2022-12-12 10:20:27",
+  "prev_buy": 20.275525,
+  "prev_sell": 18.96192
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.24486445,
-  "buy": 19.287828,
-  "date": "2022-12-09 17:50:26",
-  "prev_buy": 20.080089,
-  "prev_sell": 19.1442825
+  "sell": 20.25980682,
+  "buy": 19.3282551,
+  "date": "2022-12-12 10:20:27",
+  "prev_buy": 20.24486445,
+  "prev_sell": 19.287828
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.2260725,
-  "buy": 19.30758,
-  "date": "2022-12-09 17:50:27",
-  "prev_buy": 20.06145,
-  "prev_sell": 19.1638875
+  "sell": 20.241001,
+  "buy": 19.3480485,
+  "date": "2022-12-12 10:20:28",
+  "prev_buy": 20.2260725,
+  "prev_sell": 19.30758
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.2260725,
-  "buy": 19.297704,
-  "date": "2022-12-09 17:50:28",
-  "prev_buy": 20.06145,
-  "prev_sell": 19.154085
+  "sell": 20.241001,
+  "buy": 19.3381518,
+  "date": "2022-12-12 10:20:29",
+  "prev_buy": 20.2260725,
+  "prev_sell": 19.297704
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
   "sell": 20.05,
   "buy": 18.65,
   "date": "2022-12-09 12:40:29",
-  "prev_buy": 19.95,
-  "prev_sell": 18.55
+  "prev_buy": 20.05,
+  "prev_sell": 18.65
 },{
   "bank_id": 33,
   "bank_name": "",
