--- a/indexRt.html
+++ b/indexRt.html
@@ -46615,6 +46615,10 @@
     {
       "Date": "2022-12-09 17:00",
       "Rate": "19.7770"
+    },
+    {
+      "Date": "2022-12-12 07:01",
+      "Rate": "19.7838"
     }
   ]
 }
