commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46619,6 +46619,10 @@
     {
       "Date": "2022-12-12 07:01",
       "Rate": "19.7838"
+    },
+    {
+      "Date": "2022-12-12 08:00",
+      "Rate": "19.8323"
     }
   ]
 }
