commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46623,6 +46623,10 @@
     {
       "Date": "2022-12-12 08:00",
       "Rate": "19.8323"
+    },
+    {
+      "Date": "2022-12-12 09:00",
+      "Rate": "19.8259"
     }
   ]
 }
