commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46627,6 +46627,10 @@
     {
       "Date": "2022-12-12 09:00",
       "Rate": "19.8259"
+    },
+    {
+      "Date": "2022-12-12 10:00",
+      "Rate": "19.8454"
     }
   ]
 }
