commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46631,6 +46631,10 @@
     {
       "Date": "2022-12-12 10:00",
       "Rate": "19.8454"
+    },
+    {
+      "Date": "2022-12-12 11:00",
+      "Rate": "19.9045"
     }
   ]
 }
